--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div><br>
             <h1 id="top_txt" style="opacity:0;">Kakaotalk Bot Docs</h1>
         </section>
-        <img id="arrow" src="img/arrow.png" onclick="$([document.documentElement, document.body]).animate({ scrollTop: $('#content').offset().top }, 1200, 'easeOutCubic');">
+        <img id="arrow" src="img/arrow.png" style="opacity: 0;" onclick="$([document.documentElement, document.body]).animate({ scrollTop: $('#content').offset().top }, 1200, 'easeOutCubic');">
     </article>
     <article id="content">
         <section>
