--- a/full.html
+++ b/full.html
@@ -4135,7 +4135,7 @@
                 <p class="stitle">텍스트 크기</p>
                 <p class="dscrpt">문서 내 텍스트 크기를 설정합니다.</p>
                 <div class="tool_con">
-                    <input id="font_size" type="range" min="75" max="180" oninput="save({'font_size': $('input#font_size').val(), 'font_norm': $('#font_norm').val(), 'font_code': $('#font_code').val(), 'theme': theme()});"><p class="rangeTxt"></p>
+                    <input id="font_size" type="range" min="75" max="180" oninput="$('p.rangeTxt').text($('input#font_size').val() + '%');"><p class="rangeTxt"></p>
                 </div>
             </div>
             <div class="tool_sec" id="font">
@@ -4150,8 +4150,6 @@
                             <option>나눔스퀘어</option>
                             <option>나눔스퀘어라운드</option>
                             <option>나눔바른펜</option>
-                            <option>나눔명조</option>
-                            <option>마루부리</option>
                         </select>
                     </p><br>
                     <p class="dscrpt">코드
@@ -4172,7 +4170,7 @@
                         </div>
                         <div class="content">
                             <p class="stitle">치킨</p>
-                            <p class="dscrpt">카카오톡 봇 문서 개발자 중 한 명의 뇌피셜에 따르면, 적어도 후라이드는 b*c가 최고입니다. 이를 </p><p class="code">JavaScript</p><p class="dscrpt">로 증명해보이죠.</p>
+                            <p class="dscrp치킨>카카오톡 봇 문서 개발자 중 한 명의 뇌피셜에 따르면, 적어도 후라이드는 b*c가 최고입니다. 이를 </p><p class="code">JavaScript</p><p class="dscrpt">로 증명해보이죠.</p>
                             <div class="code">
                                 <pre><code class="javascript">var num = 12.5;<br><br>if (msg.toLowerCase() === 'chicken') {<br>    replier.reply('조용히 하고, 치킨이다'.replace(/치킨/g, 'b*c')); // 물론 장난입니다 ^^7<br>}</code></pre>
                             </div>
