--- a/full.html
+++ b/full.html
@@ -4117,7 +4117,7 @@
             </div>
         </section>
         <section id="tool">
-            <div id="login"><img id="login" src="img/profile.png"></div>
+            <div id="login"><p id="login_txt">로그인하기</p><img id="login_img" src="img/profile.png"></div>
             <form autocomplete="off">
                 <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!" name="search">
                 <button id="search_btn" type="submit"><img src="img/search.png"></button>
