--- a/full.html
+++ b/full.html
@@ -4170,7 +4170,7 @@
                         </div>
                         <div class="content">
                             <p class="stitle">치킨</p>
-                            <p class="dscrp치킨>카카오톡 봇 문서 개발자 중 한 명의 뇌피셜에 따르면, 적어도 후라이드는 b*c가 최고입니다. 이를 </p><p class="code">JavaScript</p><p class="dscrpt">로 증명해보이죠.</p>
+                            <p class="dscrpt">카카오톡 봇 문서 개발자 중 한 명의 뇌피셜에 따르면, 적어도 후라이드는 b*c가 최고입니다. 이를 </p><p class="code">JavaScript</p><p class="dscrpt">로 증명해보이죠.</p>
                             <div class="code">
                                 <pre><code class="javascript">var num = 12.5;<br><br>if (msg.toLowerCase() === 'chicken') {<br>    replier.reply('조용히 하고, 치킨이다'.replace(/치킨/g, 'b*c')); // 물론 장난입니다 ^^7<br>}</code></pre>
                             </div>
