--- a/appendix.html
+++ b/appendix.html
@@ -196,6 +196,6 @@
             </div>
         </section>
     </article>
-    <script type="text/javascript">if($("section#body").width == 0){ location.reload(); }</script>
+    <script type="text/javascript">if($("article").width == 0){ location.reload(); }</script>
 </body>
 </html>
