--- a/deepening.html
+++ b/deepening.html
@@ -155,6 +155,6 @@
             </div>
         </section>
     </article>
-    <script type="text/javascript">if($("section#body").width == 0){ location.reload(); }</script>
+    <script type="text/javascript">if($("article").width == 0){ location.reload(); }</script>
 </body>
 </html>
