--- a/full.html
+++ b/full.html
@@ -21,11 +21,14 @@
     <script type="text/javascript" src="script/dark.js"></script>
     <script type="text/javascript" src="script/newToast.js"></script>
     <script type="text/javascript" src="script/inko.js"></script>
+    <script type="text/javascript" src="script/search_data.js"></script>
     <script type="text/javascript" src="script/search.js"></script>
     <script type="text/javascript" src="script/copy.js"></script>
     <script type="text/javascript" src="script/hljs.js"></script>
     <script type="text/javascript" src="script/hl.js"></script>
     <script type="text/javascript" src="script/firebase.js"></script>
+    <script type="text/javascript" src="script/font.js"></script>
+    <script type="text/javascript" src="script/theme.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <link rel="stylesheet" href="style/fonts.css">
@@ -4104,16 +4107,19 @@
                         <img class="thank" src="../img/default.png">
                         <p id="thank_you" class="JusticeHui님"><strong>JusticeHui</strong> 님</p>
                     </div>
-                    <div class="thanks_box" id="franknoh님">
-                        <img class="thank" src="../img/dfranknoh님.png">
-                        <p id="thank_you" class="franknoh님"><strong>franknoh</strong> 님</p>
-                    </div>
                 </div>
             </div>
             <div id="99-3" class="content">
                 <p class="title">문의하기</p>
                 <p class="dscrpt">카카오톡 봇 문서에 대한 아이디어, 보완점, 내용에 대한 오류가 있을 때 문의해주세요!</p>
                 <li class="a" id="https://discord.gg/S8fMxHwSzB">문의하기</li>
+            </div>
+            <div id="dev" class="content">
+                <div id="imgs">
+                    <img src="img/nolbo.png">
+                    <img src="img/franknoh.png">
+                </div>
+                <p id="dev"><strong>N O L B O</strong>  |  <strong>F R A N K N O H</strong></p>
             </div>
         </section>
         <section id="tool">
@@ -4143,17 +4149,18 @@
                 <p class="dscrpt">문서 내 텍스트의 글꼴을 설정합니다.</p>
                 <div class="tool_con">
                     <p class="dscrpt">일반 텍스트
-                        <select class="tool_sel" id="font_norm" onchange="save({'font_size': $('input#font_size').val(), 'font_norm': $('#font_norm').val(), 'font_code': $('#font_code').val(), 'theme': theme()});">
+                        <select class="tool_sel" id="font_norm" onchange="s();">
                             <option>Noto Sans</option>
                             <option>나눔고딕</option>
                             <option>나눔바른고딕</option>
                             <option>나눔스퀘어</option>
                             <option>나눔스퀘어라운드</option>
                             <option>나눔바른펜</option>
+                            <option>마루부리</option>
                         </select>
                     </p><br>
                     <p class="dscrpt">코드
-                        <select class="tool_sel" id="font_code" onchange="save({'font_size': $('input#font_size').val(), 'font_norm': $('#font_norm').val(), 'font_code': $('#font_code').val(), 'theme': theme()});">
+                        <select class="tool_sel" id="font_code" onchange="s();">
                             <option>JetBrains Mono</option>
                             <option>D2 Coding</option>
                             <option>Consolas</option>
@@ -4164,41 +4171,43 @@
                         </select>
                     </p>
                     <div id="preview">
-                        <p class="title">미리보기</p>
+                        <p class="title">신곡</p>
                         <div id="sA">
-                            <li class="sA">치킨</li>
+                            <li class="sA">지옥편</li>
+                            <li class="sA">연옥편</li>
+                            <li class="sA">천국편</li>
                         </div>
                         <div class="content">
-                            <p class="stitle">치킨</p>
-                            <p class="dscrpt">카카오톡 봇 문서 개발자 중 한 명의 뇌피셜에 따르면, 적어도 후라이드는 b*c가 최고입니다. 이를 </p><p class="code">JavaScript</p><p class="dscrpt">로 증명해보이죠.</p>
+                            <p class="stitle">지옥편</p>
+                            <p class="dscrpt">신곡 중 <strong>지옥편</strong>은 단테 알리기에리의 신곡의 이야기를 시작하는 첫 번째 편입니다. 신곡 지옥편에서 지옥의 입구에 쓰여진 글귀를 </p><p class="code">JavaScript</p><p class="dscrpt">로 출력하게 해봅시다.</p>
                             <div class="code">
-                                <pre><code class="javascript">var num = 12.5;<br><br>if (msg.toLowerCase() === 'chicken') {<br>    replier.reply('조용히 하고, 치킨이다'.replace(/치킨/g, 'b*c')); // 물론 장난입니다 ^^7<br>}</code></pre>
+                                <pre><code class="javascript">var age = 35;<br><br>if (msg.toLowerCase() === 'inferno') {<br>    replier.reply('모든 기쁨을 버려라, 들어오는 그대들이여'.replace(/기쁨/g, '희망')); // 단테 - 신곡 지옥편 中<br>}</code></pre>
                             </div>
                             <div class="table">
                                 <table>
-                                    <th>로렘</th>
-                                    <th>입숨</th>
+                                    <th>신곡의 구성</th>
+                                    <th>단테의 인도자</th>
                                     <tr>
-                                        <td><p class="code">nolbo</p>는</td>
-                                        <td>표까지 넣기 귀찮아서 안했는데</td>
+                                        <td>지옥편 <p class="code">inferno</p></td>
+                                        <td>베르길리우스</td>
                                     </tr>
                                     <tr>
-                                        <td><p class="code">franknoh</p>가</td>
-                                        <td>넣으래요 흑흑</td>
+                                        <td>연옥편 <p class="code">purgatorio</p></td>
+                                        <td>베르길리우스</td>
                                     </tr>
                                     <tr>
-                                        <td id="no">너무</td>
-                                        <td id="no">하다!! (?)</td>
+                                        <td>천국편 <p class="code">paradiso</p></td>
+                                        <td>베아트리체</td>
                                     </tr>
                                 </table>
                             </div>
-                            <p class="dscrpt">그냥 백미나 먹읍시다!</p>
+                            <p class="code"><i>Dante Alighieri - La Divina Commedia</i></p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </article>
-    <script type="text/javascript">if($("section#body").width == 0){ location.reload(); }</script>
+    <script type="text/javascript">if($("article").width == 0){ location.reload(); }</script>
 </body>
 </html>
