--- a/full.html
+++ b/full.html
@@ -38,7 +38,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/mobile.css">
-    <link id="dark" rel="stylesheet" href="style/dark.css" media="(prefers-color-scheme: dark)">
+    <link id="t_dark" rel="stylesheet" href="style/dark.css" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="style/newToast.css">
     <title>KBot Docs | 전체</title>
 </head>
@@ -133,9 +133,6 @@
         </span>
         <span class="list" id="bookmark" data-isVisible="false">
             <div class="ttl"><h1 id="ttl">북마크</h1><img id="tool_btn" src="img/tool.png"></div>
-            <span class="sideList" id="bookmark">
-                <dd class="sdb" onclick="bkmk(0)">bkmk1</dd>
-            </span>
         </span>
     </aside>
     <article>
