--- a/full.html
+++ b/full.html
@@ -4109,7 +4109,7 @@
             <div id="99-3" class="content">
                 <p class="title">문의하기</p>
                 <p class="dscrpt">카카오톡 봇 문서에 대한 아이디어, 보완점, 내용에 대한 오류가 있을 때 문의해주세요!</p>
-                <li class="a" id="https://discord.gg/S8fMxHwSzB">문의하기</li>
+                <li class="a" id="https://discord.gg/jW4G3fEmmZ">문의하기</li>
             </div>
             <div id="dev" class="content">
                 <div id="imgs">
