--- a/API2.html
+++ b/API2.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="script/jquery-ui.js"></script>
     <script type="text/javascript" src="script/cookie.js"></script>
     <script type="text/javascript" src="script/animation.js"></script>
-    <script type="text/javascript" src="script/sidebar_full.js"></script>
+    <script type="text/javascript" src="script/sidebar.js"></script>
     <script type="text/javascript" src="script/dark.js"></script>
     <script type="text/javascript" src="script/newToast.js"></script>
     <script type="text/javascript" src="script/inko.js"></script>
@@ -33,12 +33,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <link rel="stylesheet" href="style/fonts.css">
     <link rel="stylesheet" href="style/highlighting.css">
+    <link class="t_dark" rel="stylesheet" href="style/highlighting_d.css" media="(prefers-color-scheme: dark)">
     <link rel="canonical" href="https://kkotbot-docs.kro.kr">
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/docs_black.png">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/mobile.css">
-    <link id="dark" rel="stylesheet" href="style/dark.css" media="(prefers-color-scheme: dark)">
+    <link class="t_dark" rel="stylesheet" href="style/dark.css" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="style/newToast.css">
     <title>KBot Docs | API 2</title>
 </head>
