--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     sodipodi:nodetypes="zccccccczz" />
             </g>
         </svg>
-        <div><img class="header_obj" id="login_img" src="img/profile.png"><p id="login_txt">로그인하기</p></div>
+        <img class="header_obj" id="login_img" src="img/profile.png">
     </header>
     <article>
         <section id="main">
@@ -159,11 +159,72 @@
             </div>
         </section>
         <section id="log">
+            <div class="logblock" id="19">
+                <h1 class="title">Kakaotalk Bot Docs 19</h1>
+                <ul class="big">
+                    <li>새로운 디자인 구성
+                        <ul>
+                            <li>문서 개별화 (개요, 레거시 API, API2, 라이노 엔진, 심화, 부록 개별화)</li>
+                            <li>종합 문서 추가</li>
+                            <li>메인 페이지 추가</li>
+                            <li>헤더 제거</li>
+                            <li>사이드바 업그레이드</li>
+                            <li>일반 텍스트 글꼴 변경 (Noto Sans, Noto Sans KR)</li>
+                        </ul>
+                    </li>
+                    <li>도구화면 추가작성
+                        <ul>
+                            <li>검색기능 업그레이드</li>
+                            <li>테마변경 기능 추가</li>
+                            <li>텍스트 크기 변경 기능 추가</li>
+                            <li>글꼴 변경 기능 추가</li>
+                        </ul>
+                    </li>
+                    <li>북마크 기능 추가</li>
+                </ul>
+            </div>
+            <div class="logblock" id="18">
+                <h1 class="title">Kakaotalk Bot Docs 18</h1>
+                <ul class="big">
+                    <li>내용 추가
+                        <ul>
+                            <li>개요 > 개발준비 작성</li>
+                            <li>Api2 > BroadCast, Database, Event, Http, SessionManager, Security 추가</li>
+                            <li>부록 > 문의하기 추가작성</li>
+                            <li>기본 > response함수 (기본, 통합된 매개변수) 추가작성</li>
+                        </ul>
+                    </li>
+                    <li>부록 > 도움주신 분들 디자인 변경</li>
+                    <li>코드박스 하이라이팅 색상 수정</li>
+                    <li>링크참조 텍스트 추가</li>
+                </ul>
+            </div>
+            <div class="logblock" id="17.1">
+                <h1 class="title">Kakaotalk Bot Docs 17.1</h1>
+                <ul class="big">
+                    <li>구글 검색엔진에 카카오톡 봇 문서 표기</li>
+                    <li>새로운 오픈 그래픽 이미지</li>
+                </ul>
+            </div>
+            <div class="logblock" id="17">
+                <h1 class="title">Kakaotalk Bot Docs 17</h1>
+                <ul class="big">
+                    <li>내용 추가
+                        <ul>
+                            <li>내장 객체 (String) 추가작성</li>
+                            <li>App 작성</li>
+                            <li>Bot 작성</li>
+                            <li>BotManager 작성</li>
+                        </ul>
+                    </li>
+                    <li>페이지 위치이동 애니메이션 추가</li>
+                </ul>
+            </div>
             <div class="logblock" id="16.1">
                 <h1 class="title">Kakaotalk Bot Docs 16.1</h1>
                 <ul class="big">
-                    <li>코드박스 하이라이팅 색상 개선</li>
-                    <li>사이드바 글꼴 개선 (JetBrains Mono Regular, 맑은고딕)</li>
+                    <li>정적 속성/메소드, 프로토타입 속성/메소드 아이콘이 비정상적으로 커진 문제 수정</li>
+                    <li>참고자료 링크 오류 수정</li>
                 </ul>
             </div>
             <div class="logblock" id="16">
